# Socratic-env

./: LICENSE  README.md  SocraticEnv_GRPO_Training.ipynb  blog.md  env.example  environment.py  graders.py  inference.py  leaderboard.json  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
static/: index.html  leaderboard.html
tests/: test_api.py  test_environment.py
